--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         </a>
 
         <a href="https://shop.beacons.ai/kcoaching/910d5675-39f4-4465-9e10-18b5abbce84f" target="_blank" rel="noopener noreferrer" class="link-button">
-            <img src="soins-energetiques.jpg" alt="Icône Soins Énergétiques">
+            <img src="SOINS.jpg" alt="Icône Soins Énergétiques">
             <span>Soins énergétiques</span>
         </a>
 
