--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             border-radius: 10px; /* Coins légèrement plus arrondis pour la nouvelle taille */
             object-fit: cover;
             transition: transform 0.2s ease;
+            flex-shrink: 0; /* Empêche l'image de rétrécir */
         }
 
         .link-button:hover img {
@@ -206,16 +207,17 @@
             .tagline {
                 font-size: 1em;
             }
-            .link-button, .highlight-button {
+            .link-button {
                 padding: 15px 20px; /* Réduction du padding pour compenser la taille des images */
                 font-size: 1em;
                 margin-bottom: 15px;
-                flex-direction: row; /* Assure que l'image et le texte restent en ligne */
+                flex-direction: column; /* Force la disposition en colonne sur mobile */
+                gap: 10px; /* Espacement entre l'image et le texte en colonne */
             }
             .link-button img {
                 width: 60px; /* Taille réduite sur mobile (90px peut être trop grand) */
                 height: 60px;
-                margin-right: 10px;
+                margin-right: 0; /* Réinitialise la marge droite */
             }
             .social-icons {
                 margin-top: 30px;
@@ -255,7 +257,10 @@
             <span>Rejoins le Club Viral & Décuple ta Visibilité</span>
         </a>
         
-        <a href="https://www.instagram.com/direct/t/17846779833046780" target="_blank" rel="noopener noreferrer" class="link-button">Me contacter</a>
+        <a href="https://www.instagram.com/direct/t/17846779833046780" target="_blank" rel="noopener noreferrer" class="link-button">
+            <img src="INSTA.jpg" alt="Icône Instagram Contact">
+            <span>Me contacter</span>
+        </a>
 
         <div class="social-icons">
             <a href="https://www.instagram.com/kcoaching02/" target="_blank" rel="noopener noreferrer" class="social-icon instagram" aria-label="Instagram">
