--- a/index.html
+++ b/index.html
@@ -3,31 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>K'COACHING</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <title>K'COACHING - Minimaliste</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         :root {
-            /* Nouvelle palette de couleurs pastel */
-            --background-light: #F0F4F8; /* Fond très clair, presque blanc cassé */
-            --background-gradient-start: #e0f2f7; /* Bleu très pâle */
-            --background-gradient-end: #f5e0f7; /* Rose très pâle */
+            /* Palette Minimaliste & Épurée */
+            --background-light: #F9F9F9; /* Fond très clair, presque blanc */
+            --background-gradient-start: #eef2f3; /* Gris très très clair */
+            --background-gradient-end: #e0e9ec; /* Bleu-gris très pâle */
             --card-background: #FFFFFF; /* Arrière-plan des cartes/boutons blanc pur */
-            --text-dark: #333333; /* Texte sombre pour un bon contraste sur fond clair */
-            --accent-pastel: #A2D9CE; /* Vert menthe pastel pour les boutons principaux */
-            --accent-pastel-dark: #7DCBB7; /* Vert menthe plus foncé au survol */
-            --highlight-pastel: #FFEB99; /* Jaune pâle pastel pour le bouton mis en évidence */
-            --highlight-pastel-dark: #FFDD66; /* Jaune plus soutenu au survol du highlight */
-            --shadow-light: rgba(0, 0, 0, 0.1); /* Ombre plus subtile */
-            --shadow-accent: rgba(162, 217, 206, 0.4); /* Ombre teintée pour les accents */
-            --shadow-highlight: rgba(255, 235, 153, 0.6); /* Ombre teintée pour le highlight */
+            --text-dark: #3A4750; /* Texte anthracite doux */
+            --text-light: #5C6F7D; /* Texte gris plus clair pour les détails */
+            --accent-main: #9BB8CD; /* Bleu ciel doux (inspiration sérénité) */
+            --accent-hover: #7E9BB8; /* Bleu ciel légèrement plus foncé au survol */
+            --highlight-attention: #FFDDA6; /* Jaune pâle/crème pour le CTA principal */
+            --highlight-attention-hover: #FFC473; /* Jaune plus soutenu au survol du CTA */
+            --shadow-subtle: rgba(0, 0, 0, 0.05); /* Ombre très légère */
+            --shadow-medium: rgba(0, 0, 0, 0.1); /* Ombre un peu plus visible au survol */
         }
 
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Montserrat', sans-serif;
             margin: 0;
             padding: 20px;
-            /* Dégradé animé en arrière-plan */
             background: linear-gradient(135deg, var(--background-gradient-start) 0%, var(--background-gradient-end) 100%);
             background-size: 200% 200%;
             animation: gradientAnimation 15s ease infinite alternate;
@@ -50,10 +49,10 @@
             width: 100%;
             max-width: 500px;
             margin-top: 30px;
-            padding: 25px;
+            padding: 30px; /* Un peu plus de padding pour l'espace */
             background-color: var(--card-background);
-            border-radius: 15px;
-            box-shadow: 0 10px 30px var(--shadow-light);
+            border-radius: 12px; /* Coins légèrement moins arrondis */
+            box-shadow: 0 8px 20px var(--shadow-subtle); /* Ombre plus subtile */
             text-align: center;
             animation: fadeIn 0.8s ease-out forwards;
         }
@@ -64,127 +63,125 @@
         }
 
         .profile-section {
-            margin-bottom: 30px;
+            margin-bottom: 35px; /* Plus d'espace */
         }
 
         .profile-picture {
-            width: 120px;
-            height: 120px;
+            width: 130px; /* Légèrement plus grande */
+            height: 130px;
             border-radius: 50%;
             object-fit: cover;
-            border: 4px solid var(--accent-pastel);
-            box-shadow: 0 0 15px var(--shadow-accent); /* Ombre lumineuse adaptée */
+            border: 3px solid var(--accent-main); /* Bordure plus fine */
+            box-shadow: 0 0 12px var(--shadow-medium); /* Ombre élégante */
             margin-bottom: 15px;
         }
 
         h1 {
-            font-size: 2.2em;
-            color: var(--accent-pastel-dark);
-            margin-bottom: 5px; /* Moins d'espace pour le sous-titre */
+            font-size: 2.4em; /* Plus grand */
+            color: var(--text-dark); /* Plus sobre */
+            margin-bottom: 8px;
             font-weight: 700;
         }
 
         .tagline {
-            font-size: 1.1em;
-            color: var(--text-dark);
-            margin-bottom: 20px;
-            font-weight: 400;
-            opacity: 0.8;
+            font-size: 1.15em; /* Légèrement plus grande */
+            color: var(--text-light); /* Texte plus léger pour la description */
+            margin-bottom: 25px; /* Plus d'espace */
+            font-weight: 500;
+            opacity: 0.9;
         }
 
         .link-button {
             display: flex;
             align-items: center;
-            /* Changement clé : aligne le contenu au début (gauche) */
-            justify-content: flex-start; 
-            background-color: var(--accent-pastel);
-            color: var(--text-dark);
-            padding: 15px 25px;
-            margin-bottom: 20px;
-            border-radius: 10px;
+            justify-content: flex-start; /* Aligne le contenu à gauche */
+            background-color: var(--accent-main);
+            color: var(--text-dark); /* Couleur de texte plus foncée pour le contraste */
+            padding: 18px 28px; /* Padding légèrement ajusté */
+            margin-bottom: 18px; /* Espacement ajusté */
+            border-radius: 8px; /* Coins plus angulaires */
             text-decoration: none;
             font-size: 1.1em;
             font-weight: 600;
             transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.2s ease;
-            box-shadow: 0 5px 15px var(--shadow-light);
+            box-shadow: 0 4px 10px var(--shadow-subtle); /* Ombre subtile */
             overflow: hidden;
-            position: relative; /* Pour les effets additionnels si nécessaire */
+            position: relative;
         }
 
         .link-button:hover {
-            background-color: var(--accent-pastel-dark);
-            transform: translateY(-5px) scale(1.02); /* Soulèvement et léger agrandissement */
-            box-shadow: 0 12px 25px rgba(0, 0, 0, 0.2); /* Ombre plus profonde au survol */
+            background-color: var(--accent-hover);
+            transform: translateY(-3px); /* Soulèvement plus léger */
+            box-shadow: 0 8px 18px var(--shadow-medium); /* Ombre plus marquée au survol */
         }
 
         .link-button:active {
-            transform: scale(0.97); /* Légère réduction à l'appui */
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Ombre réduite */
+            transform: translateY(0); /* Retour rapide */
+            box-shadow: 0 2px 5px var(--shadow-subtle);
         }
 
         /* Styles pour toutes les images dans les boutons */
         .link-button img {
             width: 180px; /* Taille actuelle */
             height: 180px; /* Taille actuelle */
-            /* Marge droite pour l'espace entre l'image et le texte */
-            margin-right: 30px; 
-            border-radius: 10px; /* Coins légèrement plus arrondis pour la nouvelle taille */
+            margin-right: 35px; /* Augmentation de la marge pour l'alignement */
+            border-radius: 8px; /* Coins plus angulaires pour les images */
             object-fit: cover;
-            transition: transform 0.2s ease;
-            flex-shrink: 0; /* Empêche l'image de rétrécir */
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            flex-shrink: 0;
+            box-shadow: 0 2px 5px var(--shadow-subtle); /* Petite ombre sur l'image */
         }
 
         .link-button:hover img {
-            transform: scale(1.02); /* Légère augmentation au survol */
+            transform: scale(1.02); /* Très léger agrandissement */
+            box-shadow: 0 4px 8px var(--shadow-medium); /* Ombre légèrement plus prononcée */
         }
 
         .highlight-button {
-            background-color: var(--highlight-pastel);
+            background-color: var(--highlight-attention);
             color: var(--text-dark);
             font-weight: 700;
-            animation: pulse-smooth 2s infinite ease-in-out alternate;
-            border: 2px solid var(--highlight-pastel-dark); /* Bordure pour le highlight */
+            animation: pulse-subtle 2s infinite ease-in-out alternate; /* Animation plus douce */
+            border: none; /* Pas de bordure pour un look plus plat */
+            box-shadow: 0 6px 15px rgba(255, 221, 102, 0.5); /* Ombre colorée discrète */
         }
 
         .highlight-button:hover {
-            background-color: var(--highlight-pastel-dark);
+            background-color: var(--highlight-attention-hover);
             color: var(--text-dark);
-            transform: translateY(-5px) scale(1.02);
-            box-shadow: 0 12px 25px var(--shadow-highlight); /* Ombre plus profonde et teintée */
+            transform: translateY(-3px);
+            box-shadow: 0 10px 22px rgba(255, 196, 115, 0.6); /* Ombre plus intense au survol */
         }
 
-        @keyframes pulse-smooth {
+        @keyframes pulse-subtle {
             0% {
                 transform: scale(1);
-                box-shadow: 0 5px 15px var(--shadow-light);
-                border-color: var(--highlight-pastel-dark);
+                box-shadow: 0 6px 15px rgba(255, 221, 102, 0.5);
             }
             50% {
-                transform: scale(1.02);
-                box-shadow: 0 10px 25px var(--shadow-highlight);
-                border-color: var(--highlight-pastel);
+                transform: scale(1.01); /* Léger agrandissement */
+                box-shadow: 0 8px 18px rgba(255, 221, 102, 0.6);
             }
             100% {
                 transform: scale(1);
-                box-shadow: 0 5px 15px var(--shadow-light);
-                border-color: var(--highlight-pastel-dark);
+                box-shadow: 0 6px 15px rgba(255, 221, 102, 0.5);
             }
         }
 
         .social-icons {
-            margin-top: 40px;
+            margin-top: 45px; /* Plus d'espace */
             display: flex;
             justify-content: center;
-            gap: 25px;
+            gap: 28px; /* Espacement ajusté */
         }
 
         .social-icon {
-            color: var(--text-dark);
-            font-size: 2.2em;
+            color: var(--text-light); /* Couleur des icônes plus discrète */
+            font-size: 2.3em; /* Légèrement plus grandes */
             transition: color 0.3s ease, transform 0.2s ease;
         }
 
-        /* Couleurs spécifiques aux marques au survol */
+        /* Couleurs spécifiques aux marques au survol (restent vives pour le contraste) */
         .social-icon.instagram:hover { color: #E1306C; transform: translateY(-3px); }
         .social-icon.tiktok:hover { color: #69C9D0; transform: translateY(-3px); }
         .social-icon.facebook:hover { color: #1877F2; transform: translateY(-3px); }
@@ -197,34 +194,35 @@
             }
             .container {
                 margin-top: 15px;
-                padding: 20px;
+                padding: 25px;
             }
             .profile-picture {
-                width: 100px;
-                height: 100px;
+                width: 110px;
+                height: 110px;
             }
             h1 {
-                font-size: 1.8em;
+                font-size: 2em;
             }
             .tagline {
-                font-size: 1em;
+                font-size: 1.05em;
             }
             .link-button {
-                padding: 15px 20px; /* Réduction du padding pour compenser la taille des images */
+                padding: 12px 20px; /* Padding ajusté */
                 font-size: 1em;
                 margin-bottom: 15px;
                 flex-direction: column; /* Force la disposition en colonne sur mobile */
-                gap: 10px; /* Espacement entre l'image et le texte en colonne */
+                gap: 8px; /* Espacement réduit en colonne */
                 justify-content: center; /* Centre le contenu en colonne sur mobile */
             }
             .link-button img {
-                width: 120px; /* Taille actuelle sur mobile */
-                height: 120px;
+                width: 100px; /* Taille légèrement plus petite sur mobile */
+                height: 100px;
                 margin-right: 0; /* Réinitialise la marge droite en mode colonne */
+                margin-bottom: 5px; /* Petite marge en bas de l'image en mode colonne */
             }
             .social-icons {
-                margin-top: 30px;
-                gap: 20px;
+                margin-top: 35px;
+                gap: 18px;
             }
             .social-icon {
                 font-size: 2em;
