--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         }
 
         /* Style spécifique pour le bouton "Me contacter" */
-        .link-button.contact-button { /* Nouvelle classe ajoutée au bouton dans le HTML */
+        .link-button.contact-button { 
             flex-direction: column; /* L'image et le texte seront empilés */
             justify-content: center; /* Centre verticalement les éléments */
             align-items: center; /* Centre horizontalement les éléments */
@@ -272,6 +272,11 @@
         <a href="https://kcoaching02.github.io/METAGEMINI/" target="_blank" rel="noopener noreferrer" class="link-button highlight-button">
             <img src="CALCULATEUR.jpg" alt="Icône Calculateur Métabolique">
             <span>Découvre ton Bilan Métabolique !</span>
+        </a>
+
+        <a href="https://beacons.ai/kcoaching/rquilibragealimentaire" target="_blank" rel="noopener noreferrer" class="link-button">
+            <img src="PROGRAMME.png" alt="Icône Programmes Perte de Poids">
+            <span>Les programmes perte de poids</span>
         </a>
 
         <a href="https://shop.beacons.ai/kcoaching/910d5675-39f4-4465-9e10-18b5abbce84f" target="_blank" rel="noopener noreferrer" class="link-button">
