--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <span>Découvre ton Bilan Métabolique !</span>
         </a>
 
-        <a href="https://beacons.ai/kcoaching/rquilibragealimentaire" target="_blank" rel="noopener noreferrer" class="link-button">
+        <a href="https://beacons.ai/kcoaching/programmes" target="_blank" rel="noopener noreferrer" class="link-button">
             <img src="PROGRAMME.png" alt="Icône Programmes Perte de Poids">
             <span>Les programmes perte de poids</span>
         </a>
