--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         </a>
 
         <a href="https://beacons.ai/kcoaching/programmes" target="_blank" rel="noopener noreferrer" class="link-button">
-            <img src="PROGRAMME.png" alt="Icône Programmes Perte de Poids">
+            <img src="PROGRAMMES.png" alt="Icône Programmes Perte de Poids">
             <span>Les programmes perte de poids</span>
         </a>
 
