--- a/index.html
+++ b/index.html
@@ -286,12 +286,12 @@
 
         <a href="https://stan.store/Brilleetvibre/p/formation-dsa--digital-success-academy" target="_blank" rel="noopener noreferrer" class="link-button">
             <img src="DSA.png" alt="Icône DSA">
-            <span>Lance ton Business en Ligne Rentable</span>
+            <span>Méthode complète pour lancer ton business</span>
         </a>
 
         <a href="https://stan.store/affiliates/80c38116-8aa0-4d1f-9199-39de2694025b" target="_blank" rel="noopener noreferrer" class="link-button">
             <img src="CLUBVIRAL.JPG" alt="Icône Club Viral">
-            <span>Rejoins le Club Viral & Décuple ta Visibilité</span>
+            <span>La formation pour devenir viral</span>
         </a>
         
         <a href="https://www.instagram.com/direct/t/17846779833046780" target="_blank" rel="noopener noreferrer" class="link-button contact-button">
