--- a/index.html
+++ b/index.html
@@ -284,14 +284,9 @@
             <span>Soins énergétiques</span>
         </a>
 
-        <a href="https://stan.store/Brilleetvibre/p/formation-dsa--digital-success-academy" target="_blank" rel="noopener noreferrer" class="link-button">
-            <img src="DSA.png" alt="Icône DSA">
-            <span>Méthode complète pour lancer ton business</span>
-        </a>
-
-        <a href="https://stan.store/affiliates/80c38116-8aa0-4d1f-9199-39de2694025b" target="_blank" rel="noopener noreferrer" class="link-button">
-            <img src="CLUBVIRAL.JPG" alt="Icône Club Viral">
-            <span>La formation pour devenir viral</span>
+        <a href="https://shop.beacons.ai/brilleetvibre/04bd46ba-5332-4192-95d3-ec80ec1fe86d?pageViewSource=lib_view&referrer=https://beacons.ai/brilleetvibre" target="_blank" rel="noopener noreferrer" class="link-button">
+            <img src="CLUBVIRAL.jpg" alt="Icône Club Viral">
+            <span>Rejoins le Club Viral</span>
         </a>
         
         <a href="https://www.instagram.com/direct/t/17846779833046780" target="_blank" rel="noopener noreferrer" class="link-button contact-button">
