--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         </a>
 
         <a href="https://shop.beacons.ai/brilleetvibre/04bd46ba-5332-4192-95d3-ec80ec1fe86d?pageViewSource=lib_view&referrer=https://beacons.ai/brilleetvibre" target="_blank" rel="noopener noreferrer" class="link-button">
-            <img src="CLUBVIRAL.jpg" alt="Icône Club Viral">
+            <img src="CLUBVIRAL.JPG" alt="Icône Club Viral">
             <span>Rejoins le Club Viral</span>
         </a>
         
