--- a/index.html
+++ b/index.html
@@ -271,17 +271,17 @@
 
         <a href="https://kcoaching02.github.io/METAGEMINI/" target="_blank" rel="noopener noreferrer" class="link-button highlight-button">
             <img src="CALCULATEUR.jpg" alt="Icône Calculateur Métabolique">
-            <span>Découvre ton Bilan Métabolique !</span>
+            <span>Arrêtez de deviner. Faites un bilan métabolique et obtenez des réponses précises</span>
         </a>
 
         <a href="https://beacons.ai/kcoaching/programmes" target="_blank" rel="noopener noreferrer" class="link-button">
             <img src="PROGRAMMES.png" alt="Icône Programmes Perte de Poids">
-            <span>Les programmes perte de poids</span>
+            <span>Découvres les méthodes qui ont transformé la vie de centaines de personnes</span>
         </a>
 
         <a href="https://shop.beacons.ai/kcoaching/910d5675-39f4-4465-9e10-18b5abbce84f" target="_blank" rel="noopener noreferrer" class="link-button">
             <img src="SOINS.jpg" alt="Icône Soins Énergétiques">
-            <span>Soins énergétiques</span>
+            <span>Stress, anxiété, fatigue... et si la solution était dans votre équilibre energétique?</span>
         </a>
 
         <a href="https://shop.beacons.ai/brilleetvibre/04bd46ba-5332-4192-95d3-ec80ec1fe86d?pageViewSource=lib_view&referrer=https://beacons.ai/brilleetvibre" target="_blank" rel="noopener noreferrer" class="link-button">
