--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
         <a href="https://shop.beacons.ai/brilleetvibre/04bd46ba-5332-4192-95d3-ec80ec1fe86d?pageViewSource=lib_view&referrer=https://beacons.ai/brilleetvibre" target="_blank" rel="noopener noreferrer" class="link-button">
             <img src="CLUBVIRAL.JPG.JPEG" alt="Icône Club Viral">
-            <span>Tu veux créer des revenus en ligne? Lance ton Business!</span>
+            <span>Crée tes premiers revenus en ligne!</span>
         </a>
         
         <a href="https://www.instagram.com/direct/t/17846779833046780" target="_blank" rel="noopener noreferrer" class="link-button contact-button">
