--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
         <a href="https://kcoaching02.github.io/METAGEMINI/" target="_blank" rel="noopener noreferrer" class="link-button highlight-button">
             <img src="CALCULATEUR.jpg" alt="Icône Calculateur Métabolique">
-            <span>Obtiens ton bilan métabolique complet</span>
+            <span>Obtiens ton bilan métabolique complet!</span>
         </a>
 
         <a href="https://beacons.ai/kcoaching/programmes" target="_blank" rel="noopener noreferrer" class="link-button">
