--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
         <a href="https://beacons.ai/kcoaching/programmes" target="_blank" rel="noopener noreferrer" class="link-button">
             <img src="PROGRAMMES.png" alt="Icône Programmes Perte de Poids">
-            <span>Découvre les méthodes qui ont transformé la vie de centaines de personnes</span>
+            <span>Transforme ton corps!</span>
         </a>
 
         <a href="https://shop.beacons.ai/kcoaching/910d5675-39f4-4465-9e10-18b5abbce84f" target="_blank" rel="noopener noreferrer" class="link-button">
