--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
         <a href="https://shop.beacons.ai/kcoaching/910d5675-39f4-4465-9e10-18b5abbce84f" target="_blank" rel="noopener noreferrer" class="link-button">
             <img src="SOINS.jpg" alt="Icône Soins Énergétiques">
-            <span>Stress, anxiété, fatigue... et si la solution était dans votre équilibre energétique?</span>
+            <span>Stress, anxiété, fatigue... et si la solution était dans ton équilibre energétique?</span>
         </a>
 
         <a href="https://shop.beacons.ai/brilleetvibre/04bd46ba-5332-4192-95d3-ec80ec1fe86d?pageViewSource=lib_view&referrer=https://beacons.ai/brilleetvibre" target="_blank" rel="noopener noreferrer" class="link-button">
