--- a/index.html
+++ b/index.html
@@ -274,17 +274,17 @@
             <span>Obtiens ton bilan métabolique complet!</span>
         </a>
 
-        <a href="https://beacons.ai/kcoaching/programmes" target="_blank" rel="noopener noreferrer" class="link-button">
+        <a href="https://beacons.ai/kcoaching/programmes" target="_blank" rel="noopener noreferrer" class="link-button highlight-button">
             <img src="PROGRAMMES.png" alt="Icône Programmes Perte de Poids">
             <span>Transforme ton corps!</span>
         </a>
 
-        <a href="https://shop.beacons.ai/kcoaching/910d5675-39f4-4465-9e10-18b5abbce84f" target="_blank" rel="noopener noreferrer" class="link-button">
+        <a href="https://shop.beacons.ai/kcoaching/910d5675-39f4-4465-9e10-18b5abbce84f" target="_blank" rel="noopener noreferrer" class="link-button highlight-button">
             <img src="SOINS.jpg" alt="Icône Soins Énergétiques">
             <span>Stress, anxiété, fatigue... et si la solution était dans ton équilibre energétique?</span>
         </a>
 
-        <a href="https://shop.beacons.ai/brilleetvibre/04bd46ba-5332-4192-95d3-ec80ec1fe86d?pageViewSource=lib_view&referrer=https://beacons.ai/brilleetvibre" target="_blank" rel="noopener noreferrer" class="link-button">
+        <a href="https://shop.beacons.ai/brilleetvibre/04bd46ba-5332-4192-95d3-ec80ec1fe86d?pageViewSource=lib_view&referrer=https://beacons.ai/brilleetvibre" target="_blank" rel="noopener noreferrer" class="link-button highlight-button">
             <img src="CLUBVIRAL.JPG.JPEG" alt="Icône Club Viral">
             <span>Crée tes premiers revenus en ligne!</span>
         </a>
