--- a/index.html
+++ b/index.html
@@ -271,12 +271,12 @@
 
         <a href="https://kcoaching02.github.io/METAGEMINI/" target="_blank" rel="noopener noreferrer" class="link-button highlight-button">
             <img src="CALCULATEUR.jpg" alt="Icône Calculateur Métabolique">
-            <span>Obtiens ton bilan métabolique complet!</span>
+            <span>Offert : ton bilan métabolique complet</span>
         </a>
 
         <a href="https://beacons.ai/kcoaching/programmes" target="_blank" rel="noopener noreferrer" class="link-button highlight-button">
             <img src="PROGRAMMES.png" alt="Icône Programmes Perte de Poids">
-            <span>Transforme ton corps!</span>
+            <span>Transforme ton corps</span>
         </a>
 
         <a href="https://shop.beacons.ai/kcoaching/910d5675-39f4-4465-9e10-18b5abbce84f" target="_blank" rel="noopener noreferrer" class="link-button highlight-button">
