--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <span>Stress, anxiété, fatigue... et si la solution était dans ton équilibre energétique?</span>
         </a>
 
-        <a href="https://shop.beacons.ai/brilleetvibre/04bd46ba-5332-4192-95d3-ec80ec1fe86d?pageViewSource=lib_view&referrer=https://beacons.ai/brilleetvibre" target="_blank" rel="noopener noreferrer" class="link-button highlight-button">
+        <a href="https://beacons.ai/brilleetvibre" target="_blank" rel="noopener noreferrer" class="link-button highlight-button">
             <img src="CLUBVIRAL.JPG.JPEG" alt="Icône Club Viral">
             <span>Crée tes premiers revenus en ligne!</span>
         </a>
